--- a/eks-deploy-k8s.yaml
+++ b/eks-deploy-k8s.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: my-springboot-app
-        image: 950131263819.dkr.ecr.us-east-1.amazonaws.com/mydockerrepo
+        image: 950131263819.dkr.ecr.us-east-1.amazonaws.com/mydockerrepo:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 8085
